--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This is the fuckme.fun Website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "runserver": "npx parcel src/index.html",
+    "runcsscompilertailwind": "npx tailwindcss -i ./tailwind-config.css -o ./src/tailwind.css --watch"
   },
   "repository": {
     "type": "git",
@@ -22,7 +24,9 @@
   },
   "homepage": "https://github.com/theDeal/fuckme.fun#readme",
   "devDependencies": {
-    "parcel": "^2.3.2"
+    "@parcel/transformer-sass": "^2.3.2",
+    "parcel": "^2.3.2",
+    "tailwindcss": "^3.0.23"
   },
   "dependencies": {
     "klaro": "^0.7.18"
