--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "homepage": "https://github.com/theDeal/fuckme.fun#readme",
   "devDependencies": {
     "@parcel/packager-raw-url": "^2.3.2",
+    "@parcel/packager-xml": "^2.3.2",
     "@parcel/transformer-jsonld": "^2.3.2",
     "@parcel/transformer-sass": "^2.3.2",
+    "@parcel/transformer-xml": "^2.3.2",
     "parcel": "^2.3.2",
     "tailwindcss": "^3.0.23"
   },
